# haskell-forest

./: .gitignore  LICENSE  README.md  haskell-forest.cabal  package.yaml
app/: Main.hs
nix/modules/flake/: devshell.nix  haskell.nix
src/: Lib.hs  Main.hs
src/Domain/Todo/: Task.hs  TaskRepo.hs  UseCase.hs
src/Infra/PgDatabase/: Connection.hs  Task.hs
src/Infra/Web/: Error.hs
src/Infra/Web/Handler/: Task.hs
test/: HelloSpec.hs  Spec.hs
test/Domain/Todo/: TaskSpec.hs
