cabal-version:      2.4
name:               haskell-forest
version:            0.1.0.0
license:            MIT
copyright:          2022 An Nyeong
maintainer:         srid@srid.ca
author:             An Nyeong
category:           Web
homepage:           https://srid.ca/haskell-forest

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wno-orphans -Wall -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-deriving-strategies
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base               >=4   && <5
    , data-default
    , directory
    , errors
    , filepath
    , generic-lens
    , lens
    , mtl
    , optics-core
    , postgresql-simple
    , profunctors
    , relude             >=1.0
    , shower
    , stm
    , text
    , time
    , transformers
    , ulid
    , with-utf8

  hs-source-dirs:     src
  default-language:   GHC2021

executable haskell-forest
  import:        shared
  other-modules:
    Domain.Todo.Task
    Domain.Todo.TaskRepo
    Domain.Todo.UseCase

  main-is:       Main.hs
